--- a/InteractiveStory/Base.lproj/Main.storyboard
+++ b/InteractiveStory/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="txb-Nz-X8U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wjz-7i-Fg8">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -17,68 +17,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qth-5e-PyM">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Beginning" translatesAutoresizingMaskIntoConstraints="NO" id="E9B-yU-QbM">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tT0-fN-xhz">
                                 <rect key="frame" x="246" y="522" width="108" height="30"/>
                                 <state key="normal" title="Start Adventure"/>
                                 <connections>
-                                    <segue destination="7c2-lC-alJ" kind="show" id="wUJ-7d-aaA"/>
+                                    <segue destination="Bjr-OA-jRT" kind="show" identifier="startAdventure" id="AQf-Gy-KJR"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Beginning" translatesAutoresizingMaskIntoConstraints="NO" id="iLy-5f-yy2">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Qth-5e-PyM" secondAttribute="bottom" constant="48" id="6HZ-hf-uDH"/>
-                            <constraint firstItem="iLy-5f-yy2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8jS-X7-l2C"/>
-                            <constraint firstAttribute="trailing" secondItem="iLy-5f-yy2" secondAttribute="trailing" id="Q1X-mb-Jgx"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iLy-5f-yy2" secondAttribute="bottom" id="cDQ-cd-N2R"/>
-                            <constraint firstItem="Qth-5e-PyM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qAA-De-JAT"/>
-                            <constraint firstItem="iLy-5f-yy2" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="yl6-uK-g4D"/>
+                            <constraint firstItem="E9B-yU-QbM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1cL-qj-ust"/>
+                            <constraint firstItem="tT0-fN-xhz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5Ed-c6-UaB"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="E9B-yU-QbM" secondAttribute="bottom" id="J03-UM-eXj"/>
+                            <constraint firstAttribute="trailing" secondItem="E9B-yU-QbM" secondAttribute="trailing" id="P9O-iG-ISG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tT0-fN-xhz" secondAttribute="bottom" constant="48" id="hll-j8-4XU"/>
+                            <constraint firstItem="E9B-yU-QbM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="zxv-Zn-DIA"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="NAz-SL-6dg"/>
+                    <navigationItem key="navigationItem" id="cTf-SC-6nd"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="707" y="440"/>
+            <point key="canvasLocation" x="888" y="169"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="uhz-dZ-U45">
+        <!--Page Controller-->
+        <scene sceneID="RoN-IZ-itP">
             <objects>
-                <viewController id="7c2-lC-alJ" sceneMemberID="viewController">
+                <viewController id="Bjr-OA-jRT" customClass="PageController" customModule="InteractiveStory" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="m12-28-9Gl"/>
-                        <viewControllerLayoutGuide type="bottom" id="Qoj-kc-Fla"/>
+                        <viewControllerLayoutGuide type="top" id="cm3-MS-pK8"/>
+                        <viewControllerLayoutGuide type="bottom" id="KrR-Sb-ZhN"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="HJO-hh-HwG">
+                    <view key="view" contentMode="scaleToFill" id="f1z-YR-iVq">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Jzf-3x-VZe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dSL-5g-6Ba" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1401" y="440"/>
+            <point key="canvasLocation" x="1676" y="169"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="5ib-2z-ccG">
+        <scene sceneID="L4d-pA-ntW">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="txb-Nz-X8U" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wjz-7i-Fg8" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mfx-RD-eJ4">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7pX-TO-mrm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="zkh-X7-8ny"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="iUe-k9-gGD"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bwD-X6-IFW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q8Y-nL-4yw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="457" y="-336"/>
+            <point key="canvasLocation" x="192" y="169"/>
         </scene>
     </scenes>
     <resources>
